--- a/sources/css/style.less
+++ b/sources/css/style.less
@@ -1,12 +1,12 @@
 // out: ./style.css, compress: false, sourceMap: false
 
-@import "rem.less";
-@import "/wp/assets/source/css/normalize.css";
-@import "/wp/assets/source/css/fontello.css";
-
-// @import "normalize.css";
 // @import "rem.less";
-// @import "fontello.css";
+// @import "/wp/assets/source/css/normalize.css";
+// @import "/wp/assets/source/css/fontello.css";
+
+@import "normalize.css";
+@import "rem.less";
+@import "fontello.css";
 
 /* fonts */
 
@@ -36,8 +36,8 @@
 /* basic */
 @min-width: 320px;
 @myfont: "NanumSquare";
-// @img-url: "../images";
-@img-url: "/wp/assets/source/images";
+@img-url: "../images";
+// @img-url: "/wp/assets/source/images";
 @header-height: 100px;
 
 /* color */
@@ -1734,7 +1734,7 @@ body {
 
             div.guide {
                 background: #F8F8F8;
-                height: 250px;
+                height: 120px;
                 padding: 30px 0;
 
                 h3 {
@@ -1764,20 +1764,21 @@ body {
                     }
                 }
 
-                .g02 {
+                // .g02 {
 
-                    h3 {
-                        margin-top: 25px;
-                        &::before {
-                            content: "";
-                            .block;
-                            width: 40px;
-                            height: 4px;
-                            background: #D9D9D9;
-                            margin: 0 auto 20px auto;
-                        }
-                    }
-                }
+                //     h3 {
+                //         margin-top: 25px;
+
+                //         &::before {
+                //             content: "";
+                //             .block;
+                //             width: 40px;
+                //             height: 4px;
+                //             background: #D9D9D9;
+                //             margin: 0 auto 20px auto;
+                //         }
+                //     }
+                // }
             }
 
             section.contents {
@@ -1800,9 +1801,13 @@ body {
 
                     li {
                         float: left;
-                        width: calc(100% / 7);
+                        width: calc(~"(100% - 0.5px) / 7");
                         height: 100px;
                         border-right: 1px solid #ddd;
+
+                        &:last-child {
+                            margin-right: 0;
+                        }
 
                         a {
                             .block;
@@ -1810,7 +1815,7 @@ body {
                             height: 100px;
                             line-height: 26px;
                             padding: 26px 22px; 
-                            font-size: 20px;
+                            font-size: 18px;
                             .center;
 
                             &.line {
