--- a/sources/css/style.css
+++ b/sources/css/style.css
@@ -941,7 +941,7 @@ body div#content .container .main_wrap section.notice_wrap {
   -webkit-justify-content: center;
 }
 body div#content .container .main_wrap section.notice_wrap a.info {
-  display: inline-block;
+  display: block;
   background: url("../images/info.jpg") no-repeat center / cover;
   width: 227px;
   height: 212px;
@@ -1996,10 +1996,14 @@ body div#content .sub_container section.center_contents div.tab_contents#tab03 d
   word-break: keep-all;
   margin-left: 420px;
   margin-top: 10px;
-  line-height: 24px;
+  line-height: 26px;
 }
 body div#content .sub_container section.center_contents div.tab_contents#tab03 div.con01 div.work_list ul li dl dd:nth-of-type(1) {
   margin: 0;
+}
+body div#content .sub_container section.center_contents div.tab_contents#tab03 div.con01 div.work_list ul li dl dd span {
+  display: block;
+  margin-left: 9px;
 }
 body div#content .sub_container section.center_contents div.tab_contents#tab03 div.con01 a {
   display: block;
@@ -2130,50 +2134,6 @@ body div#content .sub_container section.center_contents div.tab_contents#tab03 d
   display: block;
   font-size: 18px;
   color: #555;
-}
-body div#content .sub_container section.center_contents div.tab_contents#tab03 div.con02 div ul.teamwork {
-  margin: 0;
-  padding: 0;
-  list-style: none;
-  position: absolute;
-  top: 580px;
-  left: 90px;
-}
-body div#content .sub_container section.center_contents div.tab_contents#tab03 div.con02 div ul.teamwork li {
-  display: inline-block;
-  width: 206px;
-  height: 54px;
-  background: #fff;
-  border: 2px solid #CFCECE;
-  line-height: 54px;
-  margin-right: 87px;
-  text-align: center;
-  font-size: 17px;
-}
-body div#content .sub_container section.center_contents div.tab_contents#tab03 div.con02 div ul.teamwork li::before {
-  content: "";
-  display: block;
-  width: 123px;
-  height: 15px;
-  background: url("../images/arrow.svg") no-repeat center;
-  position: absolute;
-  top: -34px;
-  left: 50%;
-  margin-left: -60px;
-}
-body div#content .sub_container section.center_contents div.tab_contents#tab03 div.con02 div ul.teamwork li:nth-child(2)::before {
-  content: "";
-  display: block;
-  left: 103px;
-}
-body div#content .sub_container section.center_contents div.tab_contents#tab03 div.con02 div ul.teamwork li:nth-child(3) {
-  margin-right: 0;
-}
-body div#content .sub_container section.center_contents div.tab_contents#tab03 div.con02 div ul.teamwork li:nth-child(3)::before {
-  content: "";
-  display: block;
-  left: 50%;
-  margin-left: 234px;
 }
 body div#content .sub_container section.center_contents div.tab_contents#tab04 {
   position: relative;
